--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = .dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+[submodule "antigen"]
+	path = antigen
+	url = https://github.com/zsh-users/antigen
+	ignore = dirty
