--- a/.install.yaml
+++ b/.install.yaml
@@ -10,6 +10,7 @@
     ~/.antigenrc:
     ~/.gitconfig:
     ~/.zshrc:
+    ~/.gpg.conf:
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
