--- a/.install.yaml
+++ b/.install.yaml
@@ -11,6 +11,7 @@
     ~/.gitconfig:
     ~/.zshrc:
     ~/.gpg.conf:
+    ~/.hidden:
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
