--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = fzf
 	url = https://github.com/junegunn/fzf
 	ignore = dirty
+[submodule "starship"]
+	path = starship
+	url = https://github.com/starship/starship
