--- a/.install.yaml
+++ b/.install.yaml
@@ -25,4 +25,4 @@
     - description: Installing FZF
       command: ./fzf/install --no-bash --no-fish --key-bindings --completion --no-update-rc
     - description: Installing Starship
-      command: ./starship/install/install.sh --yes --bin-dir ~/.local/bin/
+      command: ./starship/install/install.sh --yes --bin-dir ~/bin
