--- a/.install.yaml
+++ b/.install.yaml
@@ -6,6 +6,10 @@
 
 - clean: ["~", "~/.config", "~/.antigen"]
 
+- create:
+    ~/.local/bin:
+      mode: 0755
+
 - link:
     ~/.antigen/antigen: antigen
     ~/.antigenrc:
@@ -25,4 +29,4 @@
     - description: Installing FZF
       command: ./fzf/install --no-bash --no-fish --key-bindings --completion --no-update-rc
     - description: Installing Starship
-      command: ./starship/install/install.sh --yes --bin-dir ~/bin
+      command: ./starship/install/install.sh --yes --bin-dir ~/.local/bin
