--- a/.install.yaml
+++ b/.install.yaml
@@ -4,22 +4,18 @@
       relink: true
       force: true
 
-- clean: ["~", "~/.config", "~/.antigen"]
+- clean: ["~", "~/.config", "~/.config/fish"]
 
 - create:
     ~/.local/bin:
       mode: 0755
 
 - link:
-    ~/.antigen/antigen: antigen
-    ~/.antigenrc:
     ~/.fzf:
+    ~/.gpg.conf:
     ~/.gitconfig:
     ~/.gitignore_global:
-    ~/.gpg.conf:
-    ~/.hidden:
     ~/.config/starship.toml: starship.toml
-    ~/.zshrc:
 
 - shell:
     - description: Initializing submodules
@@ -27,6 +23,6 @@
     - description: Updating submodules
       command: git submodule update --remote --recursive
     - description: Installing FZF
-      command: ./fzf/install --no-bash --no-fish --key-bindings --completion --no-update-rc
+      command: ./fzf/install --no-bash --no-zsh --key-bindings --completion --no-update-rc
     - description: Installing Starship
       command: ./starship/install/install.sh --yes --bin-dir ~/.local/bin
