feat: add rustup installation

--- a/config.yaml
+++ b/config.yaml
@@ -26,3 +26,6 @@
       command: curl -fsSL https://starship.rs/install.sh | bash -s -- --yes --bin-dir ~/.local/bin
     - description: Installing Fast Node Manager (FNM)
       command: curl -fsSL https://fnm.vercel.app/install | bash -s -- --skip-shell
+    - description: Installing Rustup
+      command: curl -fsSL https://sh.rustup.rs | bash -s -- -y --no-modify-path
+      
